<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".home">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="112dp"
            android:layout_marginLeft="112dp"
            android:layout_marginEnd="112dp"
            android:textStyle="bold"
            android:layout_marginRight="112dp"
            android:text="@string/title_location"
            android:textColor="@color/red"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/black"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/app_name"
            app:titleTextColor="@color/white">

        </androidx.appcompat.widget.Toolbar>


        <ImageButton
            android:id="@+id/btnNairobi"
            android:layout_width="406dp"
            android:layout_height="142dp"
            android:layout_marginTop="12dp"
            android:background="@color/chilired"
            android:contentDescription="@string/content_desc_btnnai"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16"
            app:srcCompat="@drawable/nai" />

        <ImageButton
            android:id="@+id/btnkisumu"
            android:layout_width="417dp"
            android:layout_height="142dp"
            android:layout_marginTop="12dp"
            android:background="@color/chilired"
            android:contentDescription="@string/btnkis"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17"

            app:srcCompat="@drawable/kis" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="33dp"
            android:text="@string/town1"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btnNairobi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView23" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="10dp"
            android:text="@string/Town2"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnNairobi" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="10dp"
            android:text="@string/town3"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnkisumu" />

        <ImageButton
            android:id="@+id/btnNakuru"
            android:layout_width="match_parent"
            android:layout_height="142dp"
            android:layout_marginTop="10dp"
            android:background="@color/chilired"
            android:contentDescription="@string/btnnaks"
            app:layout_constraintTop_toBottomOf="@+id/textView18"
            app:srcCompat="@drawable/naks"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="10dp"
            android:text="@string/town4"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnNakuru" />

        <ImageButton
            android:id="@+id/btnmombasa"
            android:layout_width="match_parent"
            android:layout_height="142dp"
            android:layout_marginTop="12dp"
            android:background="@color/chilired"
            android:contentDescription="@string/btnnaks"
            app:layout_constraintTop_toBottomOf="@+id/textView19"
            app:srcCompat="@drawable/mom2"
            tools:layout_editor_absoluteX="16dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>